# Tamashii

./: .gitignore  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  index.html  package-lock.json  package.json
design/: base-logo.blend
src/: App.tsx  index.css  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/blocker/: hosts.rs  mod.rs  watcher.rs
src-tauri/src/commands/: blocker.rs  mod.rs  streak.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/blocker/: commands.rs  desktop.rs  mobile.rs  mod.rs  models.rs
src-tauri/src/scheduler/: mod.rs  quote_scheduler.rs
src/components/achievements/: AchievementCard.tsx  AchievementsPage.tsx
src/components/anime/: MascotDialogue.tsx  SparkleParticles.tsx  VRMMascot.tsx
src/components/background/: MeshGradient.tsx
src/components/blocker/: ActivateForm.tsx  AppBlockerSection.tsx  BlockerPage.tsx  CategoryCard.tsx  DomainListModal.tsx  LockStatus.tsx  PermissionGuide.tsx  VpnStatusCard.tsx
src/components/dashboard/: DailyQuote.tsx  DashboardPage.tsx  PanicButton.tsx  QuickStats.tsx  StreakCounter.tsx
src/components/journal/: JournalEditor.tsx  JournalEntryCard.tsx  JournalPage.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/panic/: BreathingExercise.tsx  (+3 more)
src/lib/: achievements.ts  androidBlocker.ts  blocklists.ts  database.ts  mascotDialogues.ts  platform.ts  quotes.ts  theme.ts
src/store/: achievementStore.ts  appStore.ts  blockerStore.ts  streakStore.ts
src/types/: index.ts
(+13 files in other folders)
